--- a/ticket-to-rio/addons/gdUnit4/GdUnitRunner.cfg
+++ b/ticket-to-rio/addons/gdUnit4/GdUnitRunner.cfg
@@ -6,18 +6,180 @@
 			"@subpath": "",
 			"assembly_location": "",
 			"attribute_index": -1,
-			"display_name": "test_example",
-			"fully_qualified_name": "test.teste_test.test_example",
-			"guid": "795e05d1-fbd4412-caac337-896e758ed3",
-			"line_number": 4,
+			"display_name": "test_player_hand_counter_increases_after_draw_card",
+			"fully_qualified_name": "test.test_draw.test_player_hand_counter_increases_after_draw_card",
+			"guid": "0dfb0d6a-7048429-3ac82af-4ed5f1ff23",
+			"line_number": 8,
 			"metadata": {
 
 			},
 			"require_godot_runtime": true,
-			"source_file": "res://test/teste_test.gd",
-			"suite_name": "teste_test",
-			"suite_resource_path": "res://test/teste_test.gd",
-			"test_name": "test_example"
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_player_hand_counter_increases_after_draw_card"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_blue_train_should_be_65_initially",
+			"fully_qualified_name": "test.test_draw.test_blue_train_should_be_65_initially",
+			"guid": "ea1b3b69-77cf4df-9ad0d30-b9f4d37741",
+			"line_number": 36,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_blue_train_should_be_65_initially"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_gray_train_should_be_65_initially",
+			"fully_qualified_name": "test.test_draw.test_gray_train_should_be_65_initially",
+			"guid": "fbbec5c1-624842a-6a19019-665a467710",
+			"line_number": 43,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_gray_train_should_be_65_initially"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_green_train_should_be_65_initially",
+			"fully_qualified_name": "test.test_draw.test_green_train_should_be_65_initially",
+			"guid": "337962d0-abbd428-6b1cc33-1af3cb5e78",
+			"line_number": 50,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_green_train_should_be_65_initially"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_orange_train_should_be_65_initially",
+			"fully_qualified_name": "test.test_draw.test_orange_train_should_be_65_initially",
+			"guid": "13d80836-3fec4fd-3a7b302-cd2152efb5",
+			"line_number": 57,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_orange_train_should_be_65_initially"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_pink_train_should_be_65_initially",
+			"fully_qualified_name": "test.test_draw.test_pink_train_should_be_65_initially",
+			"guid": "ab5202d2-1b92452-d89b641-828f9c870d",
+			"line_number": 64,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_pink_train_should_be_65_initially"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_red_train_should_be_65_initially",
+			"fully_qualified_name": "test.test_draw.test_red_train_should_be_65_initially",
+			"guid": "de52a8f7-509e4f4-4a3ff0f-4831b81a42",
+			"line_number": 71,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_red_train_should_be_65_initially"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_yellow_train_should_be_65_initially",
+			"fully_qualified_name": "test.test_draw.test_yellow_train_should_be_65_initially",
+			"guid": "abf748bd-d6d74dd-1805274-a7ee982633",
+			"line_number": 78,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_yellow_train_should_be_65_initially"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_rainbow_train_should_be_55_initially",
+			"fully_qualified_name": "test.test_draw.test_rainbow_train_should_be_55_initially",
+			"guid": "3fbbe304-9b4741f-8843db0-3dcd376cd6",
+			"line_number": 85,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_rainbow_train_should_be_55_initially"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_example_2",
+			"fully_qualified_name": "test.test_draw.test_example_2",
+			"guid": "6c1b7e74-44394c4-2abc940-0f742ee71b",
+			"line_number": 92,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_draw.gd",
+			"suite_name": "test_draw",
+			"suite_resource_path": "res://test/test_draw.gd",
+			"test_name": "test_example_2"
 		}
 	],
 	"version": "5.0"
