feat: test for deck

--- a/ticket-to-rio/addons/gdUnit4/GdUnitRunner.cfg
+++ b/ticket-to-rio/addons/gdUnit4/GdUnitRunner.cfg
@@ -6,9 +6,9 @@
 			"@subpath": "",
 			"assembly_location": "",
 			"attribute_index": -1,
-			"display_name": "test_example",
-			"fully_qualified_name": "test.teste_test.test_example",
-			"guid": "795e05d1-fbd4412-caac337-896e758ed3",
+			"display_name": "test_player_hand_counter_increases_after_draw_card",
+			"fully_qualified_name": "test.teste_test.test_player_hand_counter_increases_after_draw_card",
+			"guid": "49897fe9-4c1e4c1-785e686-d512c77c4b",
 			"line_number": 4,
 			"metadata": {
 
@@ -17,7 +17,25 @@
 			"source_file": "res://test/teste_test.gd",
 			"suite_name": "teste_test",
 			"suite_resource_path": "res://test/teste_test.gd",
-			"test_name": "test_example"
+			"test_name": "test_player_hand_counter_increases_after_draw_card"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_draw_card_should_remove_one_card_from_deck",
+			"fully_qualified_name": "test.teste_test.test_draw_card_should_remove_one_card_from_deck",
+			"guid": "134aa7fc-34424fa-280e823-75be430eb1",
+			"line_number": 29,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/teste_test.gd",
+			"suite_name": "teste_test",
+			"suite_resource_path": "res://test/teste_test.gd",
+			"test_name": "test_draw_card_should_remove_one_card_from_deck"
 		}
 	],
 	"version": "5.0"
