--- a/ticket-to-rio/addons/gdUnit4/GdUnitRunner.cfg
+++ b/ticket-to-rio/addons/gdUnit4/GdUnitRunner.cfg
@@ -6,36 +6,162 @@
 			"@subpath": "",
 			"assembly_location": "",
 			"attribute_index": -1,
-			"display_name": "test_player_hand_counter_increases_after_draw_card",
-			"fully_qualified_name": "test.teste_test.test_player_hand_counter_increases_after_draw_card",
-			"guid": "06001215-363c4a0-997e543-7f3c82419a",
-			"line_number": 3,
+			"display_name": "test_test_suite_overview",
+			"fully_qualified_name": "test.test_runner.test_test_suite_overview",
+			"guid": "45bc9bf1-a1e2421-384cc70-790bab4aaa",
+			"line_number": 6,
 			"metadata": {
 
 			},
 			"require_godot_runtime": true,
-			"source_file": "res://test/teste_test.gd",
-			"suite_name": "teste_test",
-			"suite_resource_path": "res://test/teste_test.gd",
-			"test_name": "test_player_hand_counter_increases_after_draw_card"
+			"source_file": "res://test/test_runner.gd",
+			"suite_name": "test_runner",
+			"suite_resource_path": "res://test/test_runner.gd",
+			"test_name": "test_test_suite_overview"
 		},
 		{
 			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
 			"@subpath": "",
 			"assembly_location": "",
 			"attribute_index": -1,
-			"display_name": "test_draw_card_should_remove_one_card_from_deck",
-			"fully_qualified_name": "test.teste_test.test_draw_card_should_remove_one_card_from_deck",
-			"guid": "237ed8ca-1e24485-c876aee-20765992e4",
-			"line_number": 28,
+			"display_name": "test_test_categories",
+			"fully_qualified_name": "test.test_runner.test_test_categories",
+			"guid": "2f3cde56-451b42a-888b66a-6f0817a44e",
+			"line_number": 37,
 			"metadata": {
 
 			},
 			"require_godot_runtime": true,
-			"source_file": "res://test/teste_test.gd",
-			"suite_name": "teste_test",
-			"suite_resource_path": "res://test/teste_test.gd",
-			"test_name": "test_draw_card_should_remove_one_card_from_deck"
+			"source_file": "res://test/test_runner.gd",
+			"suite_name": "test_runner",
+			"suite_resource_path": "res://test/test_runner.gd",
+			"test_name": "test_test_categories"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_test_coverage_areas",
+			"fully_qualified_name": "test.test_runner.test_test_coverage_areas",
+			"guid": "44c80f0b-456546e-d8d08c3-65d3e64a74",
+			"line_number": 65,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_runner.gd",
+			"suite_name": "test_runner",
+			"suite_resource_path": "res://test/test_runner.gd",
+			"test_name": "test_test_coverage_areas"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_missing_test_areas",
+			"fully_qualified_name": "test.test_runner.test_missing_test_areas",
+			"guid": "47576ecb-8a074e3-fb9e8ec-bac22f0056",
+			"line_number": 85,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_runner.gd",
+			"suite_name": "test_runner",
+			"suite_resource_path": "res://test/test_runner.gd",
+			"test_name": "test_missing_test_areas"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_test_quality_metrics",
+			"fully_qualified_name": "test.test_runner.test_test_quality_metrics",
+			"guid": "166d47b8-4080418-2ae9bee-16667bd873",
+			"line_number": 107,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_runner.gd",
+			"suite_name": "test_runner",
+			"suite_resource_path": "res://test/test_runner.gd",
+			"test_name": "test_test_quality_metrics"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_recommended_next_steps",
+			"fully_qualified_name": "test.test_runner.test_recommended_next_steps",
+			"guid": "c35d9a8a-0e7b408-1b7846d-19e3ffbe63",
+			"line_number": 123,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_runner.gd",
+			"suite_name": "test_runner",
+			"suite_resource_path": "res://test/test_runner.gd",
+			"test_name": "test_recommended_next_steps"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_test_maintenance_guidelines",
+			"fully_qualified_name": "test.test_runner.test_test_maintenance_guidelines",
+			"guid": "4acbea76-bf3241e-98aa3a8-927b679a35",
+			"line_number": 143,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_runner.gd",
+			"suite_name": "test_runner",
+			"suite_resource_path": "res://test/test_runner.gd",
+			"test_name": "test_test_maintenance_guidelines"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_test_execution_order",
+			"fully_qualified_name": "test.test_runner.test_test_execution_order",
+			"guid": "3aa396d2-fd1d4ed-1b9a8c1-5e6ec81a9f",
+			"line_number": 163,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_runner.gd",
+			"suite_name": "test_runner",
+			"suite_resource_path": "res://test/test_runner.gd",
+			"test_name": "test_test_execution_order"
+		},
+		{
+			"@path": "res://addons/gdUnit4/src/core/discovery/GdUnitTestCase.gd",
+			"@subpath": "",
+			"assembly_location": "",
+			"attribute_index": -1,
+			"display_name": "test_test_dependencies",
+			"fully_qualified_name": "test.test_runner.test_test_dependencies",
+			"guid": "e28f51c5-2a4f405-78f8936-5e71c7bf51",
+			"line_number": 183,
+			"metadata": {
+
+			},
+			"require_godot_runtime": true,
+			"source_file": "res://test/test_runner.gd",
+			"suite_name": "test_runner",
+			"suite_resource_path": "res://test/test_runner.gd",
+			"test_name": "test_test_dependencies"
 		}
 	],
 	"version": "5.0"
